# poteka-pipeline-pytorch

./: .gitignore  MLproject  README.md  create_testdataset_json.py  fuck_test.py  main.py  makefile  pyproject.toml  run_only_evaluate.py  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
common/: config.py  data_loader.py  interpolate_by_gpr.py  interpolate_rain_tensor.py  line_notify.py  mlflow_utils.py  omegaconf_manager.py  schemas.py  utils.py
common/meta-data/: observation_point.json
conf/: config.yaml
conf/evaluate/: evaluate.yaml
conf/train/: train.yaml
docs/: toppage.html
docs/pdoc_contents/: index.html
docs/preprocess/: src.html
evaluate/: MLproject
evaluate/src/: base_evaluator.py  combine_models_evaluator.py  create_image.py  evaluate.py  evaluator.py  normal_evaluator.py  prediction.py  sequential_evaluator.py  utils.py
preprocess/: .gitignore  MLproject
preprocess/src/: constants.py  extract_data.py  extract_dummy_data.py  preprocess.py
result_analysis/: 2019-10-12-case-attentionmaps.eps  2019-10-12-case-geoplots.ipynb  2019-10-12-case-inputs.eps  2019-10-12-case-predictions.eps  2019-10-12-highquality.ipynb  2020-09-14-case-attentionmaps.eps  2020-09-14-case-inputs.eps  2020-09-14-case-predictions.eps  2020-09-14-highquality.ipynb  geo_plot_utils.py  learning_curves.ipynb  metrics.ipynb  poteka-distribution-map.ipynb  r2_scores.ipynb  standard_rmses.ipynb  test_case_utils.py  timeseries_plot.ipynb  timeseries_r2score.ipynb  utils.py  visualize_atention_maps.ipynb
scripts/: run  run2.sh  test_all_models.sh  test_run.sh  train.sh  train_all_models.sh
tests/: test.md  test_common_utils.py  test_preprocess_extract_data.py
tests/ preprocess/: test_extract_data.py  (+1 more)
train/: MLproject
train/src/: config.py  (+14 more)
(+110 files in other folders)
