[tool.poetry]
name = "mlflow_pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
scipy = "^1.7.1"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.17"
scikit-learn = "^1.0"
seaborn = "^0.11.2"
mlflow = "^1.20.2"
optuna = "^2.10.0"
pyarrow = "^6.0.0"
Shapely = "^1.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
pydantic = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
