[tool.poetry]
name = "poteka-pipeline-pytorch"
version = "0.1.0"
description = ""
authors = ["tsugumi-sys <tidemark0105@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.4"
seaborn = "^0.11.2"
mlflow = "^1.26.1"
omegaconf = "^2.2.2"
flake8 = "^4.0.1"
black = "^22.3.0"
hydra-core = "^1.2.0"
torch = "^1.11.0"
scikit-learn = "^1.1.1"
torchinfo = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
